--- a/lessons/10-clean-urls/package.json
+++ b/lessons/10-clean-urls/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --content-base ."
+    "start": "webpack-dev-server --inline --content-base . --history-api-fallback"
   },
   "author": "",
   "license": "ISC",
@@ -23,3 +23,6 @@
     "webpack-dev-server": "^1.14.1"
   }
 }
+
+
+
