--- a/lessons/10-clean-urls/package.json
+++ b/lessons/10-clean-urls/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:dev": "webpack-dev-server --inline --content-base . --history-api-fallback",
-    "start:prod": "webpack && node server.js"
+    "start": "webpack-dev-server --inline --content-base . --history-api-fallback"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +23,3 @@
     "webpack-dev-server": "^1.14.1"
   }
 }
-
-
-
